--- a/home.css
+++ b/home.css
@@ -1,15 +1,18 @@
-.TopDiv
-{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.TopDiv {
     border: 2px solid red;
 }
 
-.BottomDiv
-{
-    border: 10px dotted rgb(240, 48, 48);
+.BottomDiv {
+    border: 1px solid green;
 }
 
-.TopDiv
-{
+.TopDiv {
     display: flex;
     justify-content: right;
 }
@@ -19,17 +22,53 @@
     padding-right: 10px;
 } */
 
-.PaddingDiv
-{
+.PaddingDiv {
     padding: 10px;
 }
 
-.MiddleDiv
-{
+.MiddleDiv {
     border: 3px solid blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 75vh;
+    height: 80vh;
+}
+
+.BottomDiv1 
+{
+    border: 2px solid orange;
+    padding: 10px;
+}
+
+.BottomDiv2 
+{
+    border: 1px solid blue;
+    display: flex;
+    width: 100vw;
+}
+
+.FirstDiv 
+{
+    border: 2px solid yellow;
+    display: flex;
+    width: 40%;
+}
+
+.SecondDiv 
+{
+    border: 2px solid rgb(236, 97, 120);
+    display: flex;
+    width: 60%;
+    justify-content: right;
+}
+
+.SecondDiv div 
+{
+    padding: 10px;
+}
+
+.FirstDiv div 
+{
+    padding: 10px;
 }
