--- a/home.css
+++ b/home.css
@@ -72,3 +72,21 @@
 {
     padding: 10px;
 }
+
+.icon-img
+{
+    width: 35px;
+    height: 35px;
+}
+
+.sign-btn
+{
+    background-color: rgb(15, 46, 224);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
