--- a/home.css
+++ b/home.css
@@ -15,6 +15,7 @@
 .TopDiv {
     display: flex;
     justify-content: right;
+    align-items: center;
 }
 
 /* .TopDiv div
@@ -33,54 +34,54 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
+    padding-bottom: 300px;
 }
 
-.BottomDiv1 
+.LogoDiv
 {
+    margin-top: 100px;
+    border: 2px solid blueviolet;
+}
+
+.BottomDiv1 {
     border: 2px solid orange;
     padding: 10px;
 }
 
-.BottomDiv2 
-{
+.BottomDiv2 {
     border: 1px solid blue;
     display: flex;
     width: 100vw;
 }
 
-.FirstDiv 
-{
+.FirstDiv {
     border: 2px solid yellow;
     display: flex;
     width: 40%;
 }
 
-.SecondDiv 
-{
+.SecondDiv {
     border: 2px solid rgb(236, 97, 120);
     display: flex;
     width: 60%;
     justify-content: right;
 }
 
-.SecondDiv div 
-{
+.SecondDiv div {
     padding: 10px;
 }
 
-.FirstDiv div 
-{
+.FirstDiv div {
     padding: 10px;
 }
 
-.icon-img
-{
-    width: 35px;
-    height: 35px;
+.icon-img {
+    width: 18px;
+    height: 18px;
+    margin-top: 5px;
 }
 
-.sign-btn
-{
+.sign-btn {
     background-color: rgb(15, 46, 224);
     padding-left: 20px;
     padding-right: 20px;
@@ -89,4 +90,82 @@
     border: none;
     border-radius: 5px;
     color: white;
+    cursor: pointer;
 }
+
+
+.LogoTwoDiv {
+    width: 20vw;
+}
+
+.SearchDiv {
+    outline: none;
+    border-radius: 25px;
+    border: 0.5px solid rgb(178, 170, 180);
+    width : 45vw;
+    padding: 10px;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.ButtonOneDiv {
+    border: none;
+    width: 10vw;
+    height: 5vh;
+    margin-top: 15px;
+    margin-right: 30px;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.ButtonOneDiv:hover
+{
+    border: 1px solid rgb(192, 189, 189);
+}
+
+.ButtonTwoDiv {
+    width: 10vw;
+    height: 5vh;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.ButtonTwoDiv:hover
+{
+    border: 1px solid rgb(192, 189, 189);
+}
+
+.LanguageDiv
+{
+    border: 3px solid greenyellow;
+    display: flex;
+    margin-top: 30px;
+}
+
+.LanguageDiv2
+{
+    display: flex;
+    flex-direction: row;
+    border: 3px solid darkorange;
+
+}
+
+.LanguageDiv1
+{
+    border: 2px solid firebrick;
+    display: flex;
+    align-items: center;
+    padding: 3px;
+}
+
+.LanguageDiv2 div
+{
+     padding: 5px;
+}
+
