--- a/home.css
+++ b/home.css
@@ -157,6 +157,6 @@
      padding: 5px;
 }
 
-.FirstDiv a, .SecondDiv a, .PaddingDiv a{
+.FirstDiv a, .SecondDiv a, .PaddingDiv{
     color: rgb(107, 106, 106);
 }
